--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
 
       <!-- Header -->
       <header class="header">
-        <nav class="containers navbar navbar-expand-lg"> 
+        <nav class="containers navbar navbar-expand-xl"> 
+          <a class="navbar-brand" href="#"><img src="./images/crest.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTabula"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
               <i class="fa fa-bars"></i>
             </span>
           </button>
-    
+        
           <div class="collapse navbar-collapse" id="navbarTabula">
-            <a class="navbar-brand" href="#"><img src="./images/crest.png" alt=""></a>
+
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link" href="#">Home </a>
@@ -74,16 +75,19 @@
       </header>
       <!-- Carousel -->
       <section class="carousel">
-        <div class="containers">
-          <div class="row">
-            <div class="col-6">
-              <div class="title">
-                <span class="titleHead">ABOUT US</span>
-                <span class="titlePri">The language teaching experts</span>
+        <div class="carousel__wrap">
+
+          <div class="containers">
+            <div class="row carousel__content modal-dialog-centered">
+              <div class="col-lg-6 d-flex align-items-center">
+                <div class="title">
+                  <span class="titleHead">ABOUT US</span>
+                  <span class="titlePri">The language teaching experts</span>
+                </div>
               </div>
-            </div>
-            <div class="col-6">
-              <img src="./images/hero_team.png" alt="">
+              <div class="col-lg-6">
+                <img src="./images/hero_team.png" alt="">
+              </div>
             </div>
           </div>
         </div>
@@ -100,9 +104,9 @@
 
     <!-- Member -->
     <section class="member">
-      <div class="containers">
+      <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_1.jpg" alt="">
@@ -115,7 +119,7 @@
             </div>
   
           </div>
-          <div class="col-3">
+          <div class=" col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_2.jpg" alt="">
@@ -127,7 +131,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_3.jpg" alt="">
@@ -139,7 +143,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_4.jpg" alt="">
@@ -151,7 +155,8 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="blog__space"></div>
+          <div class="col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_5.jpg" alt="">
@@ -163,7 +168,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_6.jpg" alt="">
@@ -175,7 +180,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_7.jpg" alt="">
@@ -187,7 +192,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-12 col-lg-3">
             <div class="item__member">
               <div class="img__member">
                 <img src="./images/teacher_8.jpg" alt="">
@@ -204,12 +209,12 @@
     </section>
     <!-- form Section -->
     <section class="form__section">
-      <div class="containers_input">
+      <div class="container">
         <div class="row">
-          <div class="col-lg-7 info__img">
+          <div class="col-12 col-lg-7 info__img ">
             <img src="./images/form_img.png" alt="">
           </div>
-          <div class="col-lg-5 info_right">
+          <div class="col-12 col-lg-5 info_right">
             <form action="" class="form__info">
                 <span>Find Your Course</span>
                 <div class="form__input">
@@ -246,10 +251,10 @@
     </section>
     <!-- Footer -->
     <footer class="footer">
-      <div class="containers">
+      <div class="container">
           <div class="row footer__list">
   
-              <div class="col-lg-3 col-6 footer__item">
+              <div class="col-12 col-sm-6 col-lg-3 footer__item">
                   <h1>Contact us</h1>
                   <div class="contact__info mt-30">
                       <i class="fa fa-map-marker-alt"></i>
@@ -284,7 +289,7 @@
                       </a>
                   </div>
               </div>
-              <div class="col-lg-3 col-6 footer__item">
+              <div class="col-12 col-sm-6 col-lg-3 footer__item">
                   <h1>Quick Links</h1>
                   <ul class="mt-30">
                       <li><a href="#">Home</a></li>
@@ -293,7 +298,7 @@
                       <li><a href="#">Blog</a></li>
                   </ul>
               </div>
-              <div class="col-lg-3 col-6 footer__item">
+              <div class="col-12 col-sm-6 col-lg-3 footer__item">
                   <h1>About</h1>
                   <ul class="mt-30">
                       <li><a href="#">About Us</a></li>
@@ -302,7 +307,7 @@
                       <li><a href="#">Contact</a></li>
                   </ul>
               </div>
-              <div class="col-lg-3 col-6 footer__item">
+              <div class="col-12 col-sm-6 col-lg-3 footer__item">
                   <h1>Newsletter</h1>
                   <input type="text" class="footer__inuput-text text-center" placeholder="Your email">
                   <input type="submit" class="tabula__btn footer__btn" value="SUBCRIBE"></input>
